<resources>
    <string name="sub_title_splash">This action can contain ads!</string>
    <!---->
    <string name="title_force_update">New version available!</string>
    <string name="description_force_update">Please, update app to new version to continue.</string>
    <string name="no_thanks_force_update">No, thanks</string>
    <string name="update_force_update">Update</string>
    <!--Rating-->
    <string name="txt_ok">OK</string>
    <string name="rate">Rate</string>
    <string name="not_now">Not now</string>
    <string name="do_you_like_our_app">Do you like our app?</string>
    <string name="give_us_a_quick_rating">Give us a quick rating so we know if you like it.</string>
    <string name="thanks_for_the_rating">Thanks for the Rating</string>
    <string name="we_are_working_hard">We are working hard for a better user experience.</string>
    <string name="that_great_to_hear">That great to hear you are satisfied with the product.</string>
    <string name="thanks_for_rating">Thanks for your rating!</string>
    <!--Language-->
    <string name="title_language">Language</string>
    <string name="subtitle_language">Please choose your native language. You can change language from settings later.</string>
    <!--Intro-->
    <string name="next">Next</string>
    <string name="start">Start</string>

</resources>