<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/round_shape"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="14dp">

        <TextView
            style="@style/title_dialog_charging_alarm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:text="@string/title_force_update"
            android:textSize="26sp" />

        <TextView
            style="@style/title_charging_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="3"
            android:text="@string/description_force_update"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvNoThanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_thanks_force_update"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:textAllCaps="true" />

            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/update_force_update"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:textAllCaps="true" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>